refactor all project 2
